# DAACS

./: .gitignore  README.md  READMEKOR.md
DAACS/cli/: pyproject.toml  requirements.txt
DAACS/cli/daacs/: __init__.py  config_loader.py
DAACS/cli/daacs-cli/: .gitignore  build_log.txt  cargo.toml  clippy_log.txt  clippy_remaining.txt  test_inputs.txt
DAACS/cli/daacs-cli/examples/: test_all_models.rs  (+3 more)
DAACS/cli/daacs_cli.egg-info/: entry_points.txt  pkg-info  requires.txt  sources.txt  top_level.txt
DAACS/cli/tests/: test_workflow.py
DAACS/daacs_v2-dy/: .gitignore  daacs_config.yaml  kill.sh  pyproject.toml  pytest.ini  requirements.txt
DAACS/daacs_v2-dy/.daacs_memory/: chroma.sqlite3
DAACS/daacs_v2-dy/c4-documentation/: convert_mermaid_to_drawio.js  generate_all_svgs.js
DAACS/daacs_v2-dy/daacs/: __init__.py  agent_config.py  codex_client.py  config.py  constants.py  cors_server.py  event_handler.py  git_operations.py  orchestrator_agent.py  patcher.py  project_analysis.py  quality_scorer.py  release_gate.py  rfi_schema.py  server.py  server_context.py  server_events.py  server_helpers.py  server_manager.py  server_projects.py  server_runtime.py  server_state.py  sync_manager.py  utils.py
DAACS/daacs_v2-dy/frontend/: .gitignore  eslint.config.js  package-lock.json  package.json  playwright.config.ts  postcss.config.js  tailwind.config.ts  vite.config.ts
DAACS/daacs_v2-dy/scripts/: debug_planning.py  debug_routes.py  kill.sh  reproduce_405.py
DAACS/daacs_v2-dy/tests/: test_api_endpoints.py  test_assumptions.py  test_chat_history.py  test_context.py
(+965 files in other folders)
